Chore: complete repo maintenance TODOs

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -138,6 +138,6 @@ const BASE_URL = import.meta.env.BASE_URL;
       <div id="quick-search-root" class="quick-search__root"></div>
     </dialog>
 
-    <script type="module" src={`${BASE_URL}quick-search.mjs`}></script>
+    <script is:inline type="module" src={`${BASE_URL}quick-search.mjs`}></script>
   </body>
 </html>
