--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -264,7 +264,7 @@ const BASE_URL = import.meta.env.BASE_URL;
           }
 
           const isMobile = window.matchMedia('(max-width: 560px)').matches;
-          const N = isMobile ? 10 : 14;
+          const N = isMobile ? 10 : 12;
 
           function clearSize(img) {
             img.classList.remove('is-wide', 'is-wide2', 'is-tall', 'is-big');
@@ -277,7 +277,7 @@ const BASE_URL = import.meta.env.BASE_URL;
           }
 
           // Pick a layout pattern that looks intentional but still has r&&omness
-          const desktopPattern = ['is-big', 'is-wide', 'is-tall', 'is-wide2', '', 'is-wide2', '', 'is-tall', '', 'is-wide', '', ''];
+          const desktopPattern = ['is-wide', 'is-tall', '', 'is-wide2', '', 'is-wide2', 'is-tall', '', 'is-wide2', '', '', ''];
           const mobilePattern = ['is-wide2', 'is-tall', '', '', 'is-wide', '', 'is-tall', '', 'is-wide2', ''];
 
           imgs.forEach((img, idx) => {
